--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,4 +1,4 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = "MyFirstProgramm"
+mainClassName = "ru.stqa.pft.sandbox.MyFirstProgram"
 
